--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    
+    <h1>Rock Paper Scissor</h1>
+    <button>Rock</button>
+    <button>Paper</button>
+    <button>Scissor</button>
+
+    <h2>You - - Computer</h2>
+
+    <h2>Wins : </h2>
+    <h2>Lose : </h2>
+    <h2>Tie : </h2>
 
     <script src="./script.js"></script>
 </body>
