--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <button>Paper</button>
     <button>Scissor</button>
 
-    <h2>You - - Computer</h2>
+    <h2 class="result">You - - Computer</h2>
 
     <h2>Wins : </h2>
     <h2>Lose : </h2>
