--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
     <h2 class="result">You - - Computer</h2>
 
-    <h2>Wins : </h2>
-    <h2>Lose : </h2>
-    <h2>Tie : </h2>
+    <h2 class="win">Wins : 0</h2>
+    <h2 class="lose">Lose : 0</h2>
+    <h2 class="tie">Tie : 0</h2>
 
     <script src="./script.js"></script>
 </body>
